--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "myphoto.png"
   name             : "Kaipeng Wang [王凯鹏]"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Undergraduate Student at UESTC EE"
+  location         : "Chengdu,China"
+  employer         : "UESTC"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "Anicerkpw@outlook.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
