--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Chengdu,China"
   employer         : "UESTC"
 #  uri              : # URL
-  email            : "Anicerkpw@outlook.com" 
+  email            : "2022340101018@std.uestc.edu.cn" 
 
   # Academic websites
 #  arxiv            : # URL - Update with the correct link to your profile
